--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -16,14 +16,14 @@
 {{ template "_internal/opengraph.html" . }}
 {{ template "_internal/twitter_cards.html" . }}
 
-<link rel="icon" href="{{ .Site.BaseURL }}/favicon.ico">
-<link rel="apple-touch-icon" sizes="180x180" href="{{ .Site.BaseURL }}/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="{{ .Site.BaseURL }}/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="{{ .Site.BaseURL }}/favicon-16x16.png">
-<link rel="manifest" href="{{ .Site.BaseURL }}/site.webmanifest">
-<link rel="mask-icon" href="{{ .Site.BaseURL }}/safari-pinned-tab.svg" color="#019be8">
-<meta name="msapplication-TileColor" content="#da532c">
+<link rel="icon" href="/favicon.ico">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#019be8">
+<link rel="manifest" href="/site.webmanifest">
 <meta name="theme-color" content="#ffffff">
+<meta name="msapplication-TileColor" content="#da532c">
 
 <link rel="canonical" href="{{ .Permalink }}">
 
@@ -31,7 +31,7 @@
 {{ printf `<link rel="%s" type="%s" href="%s" title="%s" />` .Rel .MediaType.Type .Permalink $.Site.Title | safeHTML }}
 {{ end -}}
 
-<link rel="stylesheet" href="{{ .Site.BaseURL }}/css/style.css" media="all">
+<link rel="stylesheet" href="/css/style.css" media="all">
 
 {{ if not .Site.IsServer }}
 <!-- Global site tag (gtag.js) - Google Analytics -->
