--- a/static/css/style.css
+++ b/static/css/style.css
@@ -365,5 +365,56 @@ ion-icon {
       display: inline-block;
       vertical-align: text-bottom; }
 
+.tagCloud {
+  margin: 1.5rem 1rem; }
+  .tagCloud__title {
+    margin-bottom: .5rem; }
+  .tagCloud__list__itrm {
+    display: inline-block;
+    margin: .3rem .1rem; }
+  .tagCloud__link {
+    display: inline-block;
+    padding: .4rem .8rem;
+    border: 2px solid var(--main-border-color);
+    font-size: .9rrem;
+    text-decoration: none;
+    position: relative;
+    outline: none;
+    -webkit-transition: all .2s;
+    transition: all .2s;
+    text-transform: capitalize;
+    color: var(--primary-font-color); }
+    .tagCloud__link:before, .tagCloud__link:after {
+      content: '';
+      position: absolute;
+      z-index: 2;
+      width: 0;
+      height: 0;
+      border: 2px solid transparent;
+      -webkit-box-sizing: content-box;
+              box-sizing: content-box; }
+    .tagCloud__link:before {
+      top: -2px;
+      left: -2px; }
+    .tagCloud__link:after {
+      bottom: -2px;
+      right: -2px; }
+    .tagCloud__link:hover {
+      text-decoration: none;
+      color: var(--tertiary-font-colors); }
+      .tagCloud__link:hover:before, .tagCloud__link:hover:after {
+        width: 100%;
+        height: 100%; }
+      .tagCloud__link:hover:before {
+        border-bottom-color: var(--tertiary-font-colors);
+        border-left-color: var(--tertiary-font-colors);
+        -webkit-transition: height .3s, width .3s .3s;
+        transition: height .3s, width .3s .3s; }
+      .tagCloud__link:hover:after {
+        border-top-color: var(--tertiary-font-colors);
+        border-right-color: var(--tertiary-font-colors);
+        -webkit-transition: height .3s, width .3s .3s;
+        transition: height .3s, width .3s .3s; }
+
 
 /*# sourceMappingURL=style.css.map*/
