--- a/layouts/partials/pagenation.html
+++ b/layouts/partials/pagenation.html
@@ -1,10 +1,10 @@
 {{ $pag := $.Paginator }}
 {{ if gt $pag.TotalPages 1 }}
 <nav role="navigation">
-  <ul class="pager">
+  <ul class="pagination">
     {{ range $pag.Pagers }}
-    <li class="pager__item {{ if eq . $pag }}active{{ end }}"><a href="{{ .URL }}"
-        class="pager__link">{{ .PageNumber }}</a></li>
+    <li class="pagination__item {{ if eq . $pag }}active{{ end }}"><a href="{{ .URL }}"
+        class="pagination__link">{{ .PageNumber }}</a></li>
     {{ end }}
   </ul>
 </nav>
