--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -2,17 +2,19 @@
 {{ define "main" }}
 <article class="article">
   <p class="article__date">
-    <time datetime="{{ .Date.Format "2006-01-02T15:04:05Z07:00" }}">
-      <svg class="icon -date">
-        <use xlink:href="#icon-calendar" /></svg>
-      {{ .Date.Format ( .Site.Params.dateformat | default "Jan 2, 2006") }}
-    </time>
     {{ if (gt (sub .Lastmod.Unix .Date.Unix) 43200 ) }}
-    &nbsp;
     <time datetime="{{ .Lastmod.Format "2006-01-02T15:04:05Z07:00" }}">
-      <svg class="icon -date">
-        <use xlink:href="#icon-rotate-left" /></svg>
+      <span class="article__date__icon">
+        <ion-icon name="reload-outline"></ion-icon>
+      </span>
       {{ .Lastmod.Format ( .Site.Params.dateformat | default "Jan 2, 2006") }}
+    </time>
+    {{ else }}
+    <time datetime="{{ .Date.Format "2006-01-02T15:04:05Z07:00" }}">
+      <span class="article__date__icon">
+        <ion-icon name="calendar-outline"></ion-icon>
+      </span>
+      {{ .Date.Format ( .Site.Params.dateformat | default "Jan 2, 2006") }}
     </time>
     {{ end }}
   </p>
@@ -40,8 +42,7 @@
   <div class="article__tags">
     <ul>
       {{ range . }}
-      <li class="article__tags__item"><svg class="icon -tag">
-          <use xlink:href="#icon-tag" /></svg><a href="{{ "/tags/" | relLangURL }}{{ lower . }}/">{{ . }}</a></li>
+      <li class="article__tags__item"><a href="{{ "/tags/" | relLangURL }}{{ lower . }}/">{{ . }}</a></li>
       {{ end }}
     </ul>
   </div>
