--- a/layouts/partials/related.html
+++ b/layouts/partials/related.html
@@ -1,27 +1,27 @@
 {{ if eq .Page.Type "post" }}
-{{ $related := .Site.RegularPages.Related . | first 5 }}
-{{ with $related }}
-<section class="related-articles">
-  <h2 class="related-articles__title">See Also</h2>
+  {{ $related := .Site.RegularPages.Related . | first 5 }}
+  {{ with $related }}
+    <section class="related-articles">
+      <h2 class="related-articles__title">See Also</h2>
 
-  <ul>
-    {{ range . }}
-    <li class="related-articles--container">
-      <a href="{{ .RelPermalink }}" class="related-articles--item">
-        {{ with .Params.eyecatch }}
-        <div>
-          <img src="{{ $.Site.BaseURL }}{{ . }}" alt="thumbnail">
-        </div>
-        {{ else }}
-        <div>
-          <img src="{{ $.Site.BaseURL }}/no-image.jpg" alt="thumbnail">
-        </div>
+      <ul class="related-articles__list">
+        {{ range . }}
+        <li class="related-articles--container">
+          <a href="{{ .RelPermalink }}" class="related-articles--item">
+            {{ with .Params.eyecatch }}
+            <div>
+              <img src="/{{ . }}" alt="thumbnail">
+            </div>
+            {{ else }}
+            <div>
+              <img src="/no-image.jpg" alt="thumbnail">
+            </div>
+            {{ end }}
+            <span>{{ .Title }}</span>
+          </a>
+        </li>
         {{ end }}
-        <span>{{ .Title }}</span>
-      </a>
-    </li>
-    {{ end }}
-  </ul>
-</section>
-{{ end }}
+      </ul>
+    </section>
+  {{ end }}
 {{ end }}
