--- a/layouts/partials/pagenation-single.html
+++ b/layouts/partials/pagenation-single.html
@@ -1,15 +1,15 @@
 <nav role="navigation">
-  <div class="pager-single">
+  <div class="pagination-single">
     {{ with .PrevInSection }}
-    <a href="{{ .Permalink }}" class="pager-single__item">
-      <p class="pager-single__label">Previous Entry</p>
-      <p class="pager-single__title">{{ .Title }}</p>
+    <a href="{{ .Permalink }}" class="pagination-single__item">
+      <p class="pagination-single__label">Previous Entry</p>
+      <p class="pagination-single__title">{{ .Title }}</p>
     </a>
     {{ end }}
     {{ with .NextInSection }}
-    <a href="{{ .Permalink }}" class="pager-single__item">
-      <p class="pager-single__label">Next Entry</p>
-      <p class="pager-single__title">{{ .Title }}</p>
+    <a href="{{ .Permalink }}" class="pagination-single__item">
+      <p class="pagination-single__label">Next Entry</p>
+      <p class="pagination-single__title">{{ .Title }}</p>
     </a>
     {{ end }}
   </div>
