--- a/layouts/_default/summary.html
+++ b/layouts/_default/summary.html
@@ -5,19 +5,19 @@
     <p class="post__desc">{{ .Params.description }}</p>
 
     <p class="post__date">
-      <time datetime="{{ .Date.Format "2006-01-02T15:04:05Z07:00" }}">
-          <span class="post__date__icon">
-            <ion-icon name="calendar-outline"></ion-icon>
-          </span>
-          {{ .Date.Format ( .Site.Params.dateformat | default "Jan 2, 2006") }}
-      </time>
       {{ if (gt (sub .Lastmod.Unix .Date.Unix) 43200 ) }}
-      &nbsp;
       <time datetime="{{ .Lastmod.Format "2006-01-02T15:04:05Z07:00" }}">
-          <span class="post__date__icon">
-            <ion-icon name="calendar-outline"></ion-icon>
-          </span>
-          {{ .Lastmod.Format ( .Site.Params.dateformat | default "Jan 2, 2006") }}
+        <span class="post__date__icon">
+          <ion-icon name="reload-outline"></ion-icon>
+        </span>
+        {{ .Lastmod.Format ( .Site.Params.dateformat | default "Jan 2, 2006") }}
+      </time>
+      {{ else }}
+      <time datetime="{{ .Date.Format "2006-01-02T15:04:05Z07:00" }}">
+        <span class="post__date__icon">
+          <ion-icon name="calendar-outline"></ion-icon>
+        </span>
+        {{ .Date.Format ( .Site.Params.dateformat | default "Jan 2, 2006") }}
       </time>
       {{ end }}
     </p>
