--- a/layouts/partials/related.html
+++ b/layouts/partials/related.html
@@ -17,7 +17,19 @@
               <img src="/no-image.jpg" alt="thumbnail">
             </div>
             {{ end }}
-            <span>{{ .Title }}</span>
+            <div>
+              <span>{{ .Title }}</span>
+              <br>
+              {{ if (gt (sub .Lastmod.Unix .Date.Unix) 43200 ) }}
+              <time datetime="{{ .Lastmod.Format "2006-01-02T15:04:05Z07:00" }}">
+                {{ .Lastmod.Format ( .Site.Params.dateformat | default "Jan 2, 2006") }}
+              </time>
+              {{ else }}
+              <time datetime="{{ .Date.Format "2006-01-02T15:04:05Z07:00" }}">
+                {{ .Date.Format ( .Site.Params.dateformat | default "Jan 2, 2006") }}
+              </time>
+              {{ end }}
+            </div>
           </a>
         </li>
         {{ end }}
