--- a/src/scss/post.scss
+++ b/src/scss/post.scss
@@ -14,6 +14,10 @@
         }
     }
 
+    &_title {
+        font-size: 1.4rem;
+    }
+
     &__desc {
         margin-top: .5em;
         margin-bottom: .5em;
